# umatic

./: README.md
InputFiles/: A_AVBiCryExample.txt  A_BiCryExample.txt  BLOCK_BiCryExample_t000000.blz  BLOCK_BiCryExample_t001000.blz  BLOCK_BiCryExample_t002000.blz  BLOCK_BiCryExample_t003000.blz  BLOCK_BiCryExample_t004000.blz  BLOCK_BiCryExample_t005000.blz  BLOCK_BiCryExample_t006000.blz  BLOCK_BiCryExample_t007000.blz  BLOCK_BiCryExample_t008000.blz  BLOCK_BiCryExample_t009000.blz  BLOCK_BiCryExample_t010000.blz  BiCryExample.csv  BiCryExample_sum.csv  FS_AVBiCryExample.txt  FS_BiCryExample.txt  G_H_BiCryExample.csv  G_L_sb0_BiCryExample.csv  ca_ctrl.in  ca_geoplus.in  ca_matprop.in  ca_restart.in  facecode.txt  props_alloy0.in  props_gas.in  step.blz  umat_run
casource/: CMakeLists.txt  SurCell.h  SurCellRoutines.c  SurCellRoutines.h  T_var_read.c  alloc_bb.c  alloc_multicomp.c  alloc_sb.c  analythic.c  bigblock.c  bigblock.h  blocks.h  ca_ctrl.in  ca_feedback.c  ca_geoplus.in  ca_histo.c  ca_matprop.in  ca_project.dox  ca_project_nograph.dox  ca_prop_wrapper.c  ca_read_wrapper.c  ca_solid.c  ca_wrapper.c  calc_sb.c  calc_solprops_poly.c  castats.c  castats.h  checkblock.c  checkgas.c  checks.c  close_sb.c  colour.h  constants.h  cube.h  curvature.c  curvature.h  curvature_3D.c  fcopymat.c  fem.h  fg_read.c  (+129 more)
casource/.svn/: all-wcprops  entries
casource/.svn/prop-base/: p_growth.c.svn-base  replacerand.c.svn-base
casource/.svn/text-base/: CMakeLists.txt.netbeans-base  SurCell.h.svn-base  SurCellRoutines.c.svn-base  SurCellRoutines.h.svn-base  T_var_read.c.svn-base  alloc_bb.c.svn-base  alloc_multicomp.c.svn-base  alloc_sb.c.svn-base  analythic.c.svn-base  bigblock.c.svn-base  bigblock.h.svn-base  blocks.h.svn-base  ca_ctrl.in.svn-base  ca_feedback.c.svn-base  ca_geoplus.in.svn-base  ca_histo.c.svn-base  ca_matprop.in.svn-base  ca_procast.in.svn-base  ca_project.dox.svn-base  ca_prop_wrapper.c.svn-base  ca_read_wrapper.c.svn-base  ca_restart.in.svn-base  ca_solid.c.svn-base  ca_wrapper.c.svn-base  calc_sb.c.svn-base  calc_solprops_poly.c.svn-base  castats.c.svn-base  checkblock.c.svn-base  checkgas.c.svn-base  checks.c.svn-base  checks.h.svn-base  close_sb.c.svn-base  colour.h.svn-base  common.h.svn-base  constants.h.svn-base  cube.h.svn-base  curvature.c.svn-base  curvature.h.svn-base  curvature_3D.c.svn-base  fcopymat.c.svn-base  (+136 more)
casource/ca_aux_progs/: Makefile  f_res.c  float_convert.c  fsres.c  make_routines.sh  make_structure_output.y  make_structure_reader.y  makemould.cxx  makeruns.sh  readstruct.y  zdecimate
casource/ca_aux_progs/.svn/: all-wcprops  entries
casource/ca_aux_progs/.svn/prop-base/: zdecimate.svn-base
casource/ca_aux_progs/.svn/text-base/: debin.c.svn-base  debin.h.svn-base  do_zdecimate.svn-base  f_res.c.svn-base  fsres.c.svn-base  i_grainsize.c.svn-base  i_res.c.svn-base  make_structure_output.y.svn-base  make_structure_reader.y.svn-base  makemould.cxx.svn-base  pscontour_script.svn-base  readlexer.l.svn-base
casource/nbproject/: Package-Default.bash  configurations.xml  project.xml
casource/nbproject/private/: configurations.xml
casource/read_list/: CMakeLists.txt  Makefile  convert.c  convert.h  csv.h  debin.h  findvals.c  findvals.h  findvals_old.c  freecsv.c  freecsv.h  init.c  init.h  qsort_csv.c  read_csv.c  read_fg_list.c  read_list.c  readwrite.c  readwrite.h  readwrite_fg.c  readwrite_fg.h  safeopen.c  safeopen.h  unit_conv.c
casource/read_list/.svn/: all-wcprops  entries
casource/read_list/.svn/prop-base/: CMakeLists.txt.svn-base
casource/read_list/.svn/text-base/: CMakeLists.txt.svn-base  Makefile.svn-base  convert.c.svn-base  convert.h.svn-base  csv.h.svn-base  findvals.c.svn-base  findvals.h.svn-base  findvals_old.c.svn-base  freecsv.c.svn-base  freecsv.h.svn-base  init.c.svn-base  init.h.svn-base  qsort_csv.c.svn-base  qsort_csv.h.svn-base  read_csv.c.svn-base  read_fg_list.c.svn-base  read_fg_list.h.svn-base  read_list.c.svn-base  readwrite.c.svn-base  readwrite.h.svn-base  readwrite_data.c.svn-base  readwrite_fg.c.svn-base  readwrite_fg.h.svn-base  safeopen.c.svn-base  unit_conv.c.svn-base
casource/read_phase_diag/: Makefile  Makelib  P_out.c  P_out.h  README  W_out.c  W_out.h  convert.c  convert.h  csv.h  debin.c  freecsv.c  freecsv.h  header.txt  init.c  init.h  libreadlist.h  make_structure_output.c  make_structure_reader.c  make_structure_reader.h  maketernary.c  maketernary.cxx  ph_input.h  ph_input_struct_reader.c  ph_input_struct_reader.h  ph_input_struct_writer.c  ph_input_struct_writer.h  phasediag.c  phasediag.h  read_csv.c  readphasediag.c  readwrite.c  readwrite.h  readwrite_compress.c  safeopen.c  testmatrix.cxx  vec.cxx  vec.h  writephasediag.c
casource/read_phase_diag/.svn/: all-wcprops  entries
casource/read_phase_diag/.svn/text-base/: P_out.c.svn-base  P_out.h.svn-base  W_out.c.svn-base  convert.c.svn-base  convert.h.svn-base  csv.h.svn-base  freecsv.c.svn-base  freecsv.h.svn-base  init.c.svn-base  init.h.svn-base  libreadlist.h.svn-base  make_structure_output.c.svn-base  make_structure_output.h.svn-base  make_structure_reader.c.svn-base  maketernary.c.svn-base  maketernary.cxx.svn-base  ph_input.h.svn-base  ph_input_struct_reader.c.svn-base  ph_input_struct_reader.h.svn-base  ph_input_struct_writer.c.svn-base  ph_input_struct_writer.h.svn-base  phasediag.c.svn-base  phasediag.h.svn-base  read_csv.c.svn-base  read_fg_list.h.svn-base  readphasediag.c.svn-base  readwrite.c.svn-base  readwrite.h.svn-base  safeopen.c.svn-base  testmatrix.cxx.svn-base  vec.cxx.svn-base  writephasediag.c.svn-base
casource/umat_doc/: PreparingDocs.tex
casource/umat_doc/.svn/: all-wcprops  entries
casource/umat_doc/.svn/text-base/: CodeProblems.tex.svn-base  TableOfContents.tex.svn-base  documentation.tex.svn-base
umatic/nbproject/: configurations.xml  project.xml
umatic/nbproject/private/: Default.properties  configurations.xml  private.xml
